# PathMap

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: rust-hygiene.yml
benches/: binary_keys.rs  cata_context.rs  cities.rs  graft_child_maps_criterion.rs  graft_masked_branches.rs  multiplicities.rs  node_layout.rs  oeis.rs  parallel.rs  pointcloud.rs  prefix_zipper.rs  product_zipper.rs  product_zipper_criterion.rs  restrict_zipper_criterion.rs  serde.rs  shakespeare.rs  sla.rs  sparse_keys.rs  streaming_iteration_criterion.rs  superdense_keys.rs  write_zipper_scout.rs  zipper_head_owned.rs
examples/arena_compact_tests/src/: main.rs  symbol_dump.rs
examples/sampling/: Cargo.toml
examples/sampling/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pathmap_ops.rs
pathmap-book/src/: 1.00.00_intro.md  1.00.01_basics.md  1.01.00_algebraic_ops.md  1.01.01_algebraic_traits.md  1.02.00_zippers.md  1.02.01_zipper_trait.md  1.02.02_zipper_values.md  1.02.03_zipper_paths.md  1.02.04_zipper_moving.md  1.02.05_zipper_iter.md  1.02.06_zipper_writing.md  1.02.07_zipper_algebra.md  1.03.00_multi_zipper.md  1.03.01_multithreading.md  1.04.00_abstract_zippers.md  1.05.00_morphisms.md  1.05.01_catamorphism.md  1.06.00_serialize_deserilize.md  2.00.00_database_intro.md  2.00.01_concurrency.md  2.01.00_encoding_overview.md  2.02.00_primitive_representations.md  2.02.01_integer_encoding.md  2.02.02_float_encoding.md  2.02.03_point_encoding.md  2.02.04_symbol_encoding.md  2.02.05_fuzzy_search_encoding.md  A.0001_map_root_values.md  A.0002_smart_ptr_upgrade.md  A.0003_policy_API.md  A.0004_scouting_write_zipper.md  A.0005_cached_cata_and_path_visibility.md  SUMMARY.md  api_links.md
pathmap-derive/: Cargo.toml  README.md
pathmap-derive/src/: lib.rs
scripts/: fuzz-smoke.sh  miri-smoke.sh  node-layout-ab.py  node-layout-table.py  rust-hygiene.sh  rust-perf.sh  type-sizes.sh
src/: arena_compact.rs  bridge_node.rs  counters.rs  dense_byte_node.rs  dependent_zipper.rs  distr_combinators.rs  empty_node.rs  empty_zipper.rs  experimental.rs  fuzzer.rs  lib.rs  line_list_node.rs  merkleization.rs  morphisms.rs  old_cursor.rs  overlay_zipper.rs  paths_serialization.rs  paths_serialization_nightly.rs  poly_zipper.rs  prefix_zipper.rs  product_zipper.rs  random.rs  restrict_zipper.rs  ring.rs  subtract_zipper.rs  tiny_node.rs  trie_map.rs  trie_node.rs  trie_ref.rs  viz.rs  write_zipper.rs  zipper.rs  zipper_head.rs  zipper_tracking.rs
src/experimental/: serialization.rs  tree_serialization.rs  zipper_algebra.rs
src/utils/: ints.rs  mod.rs
src/utils/debug/: diff_zipper.rs  morphism_debug.rs
tests/: pathmap_algebra_differential.rs
