[package]
name = "pathmap-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.pathmap]
path = ".."
default-features = false

[features]
default = ["pathmap/default"]

[workspace]

[[bin]]
name = "pathmap_ops"
path = "fuzz_targets/pathmap_ops.rs"
test = false
doc = false
